Fix description visibility

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@ body {
     background: url('/media/homepage_background.png') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
-    color: rgb(0, 0, 0);
+    color: rgb(0, 160, 0);
     font-family: 'Lato';
     text-align: center;
 }
@@ -40,7 +40,7 @@ body {
 }
 
 .shop-now-button {
-    background: rgb(0, 78, 4);
+    background: rgb(0, 160, 0);
     color: white;
     min-width: 260px;
 }
